# Chess

./: CMakeLists.txt  LICENSE  README.md
src/: app.c  app.h  asset_manager.c  asset_manager.h  board.c  board.h  main.c  movement.c  movement.h  piece.c  piece.h  renderer.c  renderer.h
